# async-rust-assignment

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/controllers/: mod.rs  task_controller.rs  user_controller.rs  vehicle_controller.rs
src/db/: mod.rs
src/middlewares/: auth_middleware.rs  upload_middleware.rs
src/models/: mod.rs  task_model.rs  user_model.rs  vehicle_model.rs
src/routes/: mod.rs  task_routes.rs  user_routes.rs  vehicle_routes.rs
src/services/: mod.rs  task_service.rs  user_service.rs  vehicle_service.rs
uploads/vehicles/: 360ec0d3-e8d9-426f-a89e-7c8c74c830e8_test1.jfif
