[package]
name = "async_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
dotenvy = "0.15"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
