[package]
name = "async_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core async/runtime ---
tokio = { version = "1.46.1", features = ["full"] }

# --- Web Framework ---
axum = { version = "0.7.5", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# --- Data Handling ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }

# --- Error Handling & Logging ---
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- Database ---
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
bson = "2.0"

# --- Env & Async utils ---
dotenvy = "0.15"
futures-util = "0.3"

# --- Dates ---
chrono = { version = "0.4", features = ["serde"] }

# --- Auth & Security ---
jsonwebtoken = "9.3.0"
bcrypt = "0.15.0"
headers = "0.4.0"

# --- File handling & multipart ---
tokio-util = "0.7"
mime = "0.3"
